...

                projectName.isBlank() -> {
                    "Project name is required."
                }

                File(destinationDirectory, projectName).exists() -> {
                    "Target folder already exists: ${File(destinationDirectory, projectName).path}"
                }

                else -> {
                    null
                }
            }
...
